# unix_labs

network/: CMakeLists.txt  client.cpp  server.cpp
network/lib/: server_client_functions.h
processes/: CMakeLists.txt  check.hpp  mainnc.cpp  mainq.cpp  mainsig.cpp  mainuc.cpp
threads/: CMakeLists.txt  find_indices.cpp  mainq.cpp  mmult.cpp
threads/lib/: matrix.h  multithread_searching.h  threadsafe_queue.h
userinfo/: CMakeLists.txt  userinfo.cpp
